testing/sqltests/tests/snapshot_tests/subqueries/snapshots/subqueries__between-lhs-nested-scalar-subquery.snap
---
source: subqueries.sqltest
expression: SELECT id FROM products WHERE ((SELECT max(id) FROM products) + 1) BETWEEN 2 AND 4;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN products
`--SCAN products

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0    Init          0  36   0                   0  Start at 36
   1    Once         18   0   0                   0  goto 18
   2    BeginSubrtn   2   0   0                   0  r[2]=NULL
   3    Null          0   1   0                   0  r[1]=NULL
   4    Null          0   4   0                   0  r[4]=NULL
   5    Integer       1   5   0                   0  r[5]=1; LIMIT counter
   6    IfNot         5  14   0                   0  if !r[5] goto 14
   7    OpenRead      0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   8    Last          0  14   0                   0
   9      RowId       0   6   0                   0  r[6]=products.rowid
  10      CollSeq     0   0   0  Binary           0  collation=Binary
  11      AggStep     0   6   4  max              0  accum=r[4] step(r[6])
  12      Goto        0  14   0                   0
  13    Prev          0   9   0                   0
  14    AggFinal      0   4   0  max              0  accum=r[4]
  15    Copy          4   3   0                   0  r[3]=r[4]
  16    Copy          3   1   0                   0  r[1]=r[3]
  17  Return          2   0   1                   0
  18  OpenRead        1   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
  19  Copy            1  10   0                   0  r[10]=r[1]
  20  Add            10  11   9                   0  r[9]=r[10]+r[11]
  21  Copy            9  13   0                   0  r[13]=r[9]
  22  Integer         1  12   0                   0  r[12]=1
  23  Ge             13  14  25                   0  if r[13]>=r[14] goto 25
  24  ZeroOrNull     13  12  14                   0  ((r[13]=NULL)|(r[14]=NULL)) ? r[12]=NULL : r[12]=0
  25  Copy            9  16   0                   0  r[16]=r[9]
  26  Integer         1  15   0                   0  r[15]=1
  27  Le             16  17  29                   0  if r[16]<=r[17] goto 29
  28  ZeroOrNull     16  15  17                   0  ((r[16]=NULL)|(r[17]=NULL)) ? r[15]=NULL : r[15]=0
  29  And            15  12   8                   0  r[8]=(r[12] && r[15])
  30  IfNot           8  35   1                   0  if !r[8] goto 35
  31  Rewind          1  35   0                   0  Rewind table products
  32    RowId         1   7   0                   0  r[7]=products.rowid
  33    ResultRow     7   1   0                   0  output=r[7]
  34  Next            1  32   0                   0
  35  Halt            0   0   0                   0
  36  Transaction     0   1  11                   0  iDb=0 tx_mode=Read
  37  Integer         1  11   0                   0  r[11]=1
  38  Integer         2  14   0                   0  r[14]=2
  39  Integer         4  17   0                   0  r[17]=4
  40  Goto            0   1   0                   0
