testing/sqltests/tests/snapshot_tests/subqueries/snapshots/subqueries__between-subquery-lhs-delete.snap
---
source: subqueries.sqltest
expression: |-
  DELETE FROM products
      WHERE (SELECT max(id) FROM products) BETWEEN 1 AND 100;
info:
  statement_type: DELETE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN products
`--SCAN products

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0    Init           0  49   0                   0  Start at 49
   1    OpenWrite      0   2   0                   0  root=2; iDb=0
   2    OpenWrite      1   8   0                   0  root=8; iDb=0
   3    Null           0   1   0                   0  r[1]=NULL
   4    Once          21   0   0                   0  goto 21
   5    BeginSubrtn    3   0   0                   0  r[3]=NULL
   6    Null           0   2   0                   0  r[2]=NULL
   7    Null           0   5   0                   0  r[5]=NULL
   8    Integer        1   6   0                   0  r[6]=1; LIMIT counter
   9    IfNot          6  17   0                   0  if !r[6] goto 17
  10    OpenRead       2   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
  11    Last           2  17   0                   0
  12      RowId        2   7   0                   0  r[7]=products.rowid
  13      CollSeq      0   0   0  Binary           0  collation=Binary
  14      AggStep      0   7   5  max              0  accum=r[5] step(r[7])
  15      Goto         0  17   0                   0
  16    Prev           2  12   0                   0
  17    AggFinal       0   5   0  max              0  accum=r[5]
  18    Copy           5   4   0                   0  r[4]=r[5]
  19    Copy           4   2   0                   0  r[2]=r[4]
  20  Return           3   0   1                   0
  21  OpenRead         0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
  22  Copy             2  10   0                   0  r[10]=r[2]
  23  Copy            10  12   0                   0  r[12]=r[10]
  24  Integer          1  11   0                   0  r[11]=1
  25  Ge              12  13  27                   0  if r[12]>=r[13] goto 27
  26  ZeroOrNull      12  11  13                   0  ((r[12]=NULL)|(r[13]=NULL)) ? r[11]=NULL : r[11]=0
  27  Copy            10  15   0                   0  r[15]=r[10]
  28  Integer          1  14   0                   0  r[14]=1
  29  Le              15  16  31                   0  if r[15]<=r[16] goto 31
  30  ZeroOrNull      15  14  16                   0  ((r[15]=NULL)|(r[16]=NULL)) ? r[14]=NULL : r[14]=0
  31  And             14  11   9                   0  r[9]=(r[11] && r[14])
  32  IfNot            9  37   1                   0  if !r[9] goto 37
  33  Rewind           0  37   0                   0  Rewind table products
  34    RowId          0   8   0                   0  r[8]=products.rowid
  35    RowSetAdd      1   8   0                   0
  36  Next             0  34   0                   0
  37  Close            0   0   0                   0
  38  OpenWrite        0   2   0                   0  root=2; iDb=0
  39  OpenWrite        3   8   0                   0  root=8; iDb=0
  40    RowSetRead     1  48  17                   0
  41    NotExists      0  47  17                   0
  42    NotExists      0  47  17                   0
  43    Column         0   2  18                   0  r[18]=products.category_id
  44    RowId          0  19   0                   0  r[19]=products.rowid
  45    IdxDelete      1  18   2                   1
  46    Delete         0   0   0  products         0
  47  Goto             0  40   0                   0
  48  Halt             0   0   0                   0
  49  Transaction      0   2  11                   0  iDb=0 tx_mode=Write
  50  Integer          1  13   0                   0  r[13]=1
  51  Integer        100  16   0                   0  r[16]=100
  52  Goto             0   1   0                   0
