testing/sqltests/tests/snapshot_tests/subqueries/snapshots/subqueries__between-subquery-lhs-not.snap
---
source: subqueries.sqltest
expression: |-
  SELECT id
      FROM products
      WHERE (SELECT max(id) FROM products) NOT BETWEEN 10 AND 20;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN products
`--SCAN products

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0    Init          0  28   0                   0  Start at 28
   1    Once         18   0   0                   0  goto 18
   2    BeginSubrtn   2   0   0                   0  r[2]=NULL
   3    Null          0   1   0                   0  r[1]=NULL
   4    Null          0   4   0                   0  r[4]=NULL
   5    Integer       1   5   0                   0  r[5]=1; LIMIT counter
   6    IfNot         5  14   0                   0  if !r[5] goto 14
   7    OpenRead      0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   8    Last          0  14   0                   0
   9      RowId       0   6   0                   0  r[6]=products.rowid
  10      CollSeq     0   0   0  Binary           0  collation=Binary
  11      AggStep     0   6   4  max              0  accum=r[4] step(r[6])
  12      Goto        0  14   0                   0
  13    Prev          0   9   0                   0
  14    AggFinal      0   4   0  max              0  accum=r[4]
  15    Copy          4   3   0                   0  r[3]=r[4]
  16    Copy          3   1   0                   0  r[1]=r[3]
  17  Return          2   0   1                   0
  18  OpenRead        1   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
  19  Copy            1  10   0                   0  r[10]=r[1]
  20  Gt              9  10  23                   0  if r[9]>r[10] goto 23
  21  Copy            1  12   0                   0  r[12]=r[1]
  22  Le             12  13  27                   0  if r[12]<=r[13] goto 27
  23  Rewind          1  27   0                   0  Rewind table products
  24    RowId         1   7   0                   0  r[7]=products.rowid
  25    ResultRow     7   1   0                   0  output=r[7]
  26  Next            1  24   0                   0
  27  Halt            0   0   0                   0
  28  Transaction     0   1  11                   0  iDb=0 tx_mode=Read
  29  Integer        10   9   0                   0  r[9]=10
  30  Integer        20  13   0                   0  r[13]=20
  31  Goto            0   1   0                   0
