testing/sqltests/tests/snapshot_tests/subqueries/snapshots/subqueries__between-subquery-lhs-update.snap
---
source: subqueries.sqltest
expression: |-
  UPDATE products
      SET stock = stock + 1
      WHERE (SELECT max(id) FROM products) BETWEEN 1 AND 100;
info:
  statement_type: UPDATE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN products
`--SCAN products

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0    Init           0  37   0                   0  Start at 37
   1    Once          18   0   0                   0  goto 18
   2    BeginSubrtn    2   0   0                   0  r[2]=NULL
   3    Null           0   1   0                   0  r[1]=NULL
   4    Null           0   4   0                   0  r[4]=NULL
   5    Integer        1   5   0                   0  r[5]=1; LIMIT counter
   6    IfNot          5  14   0                   0  if !r[5] goto 14
   7    OpenRead       0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   8    Last           0  14   0                   0
   9      RowId        0   6   0                   0  r[6]=products.rowid
  10      CollSeq      0   0   0  Binary           0  collation=Binary
  11      AggStep      0   6   4  max              0  accum=r[4] step(r[6])
  12      Goto         0  14   0                   0
  13    Prev           0   9   0                   0
  14    AggFinal       0   4   0  max              0  accum=r[4]
  15    Copy           4   3   0                   0  r[3]=r[4]
  16    Copy           3   1   0                   0  r[1]=r[3]
  17  Return           2   0   1                   0
  18  OpenWrite        1   2   0                   0  root=2; iDb=0
  19  Copy             1   9   0                   0  r[9]=r[1]
  20  Gt               8   9  36                   0  if r[8]>r[9] goto 36
  21  Copy             1  11   0                   0  r[11]=r[1]
  22  Gt              11  12  36                   0  if r[11]>r[12] goto 36
  23  Rewind           1  36   0                   0  Rewind table products
  24    RowId          1  13   0                   0  r[13]=products.rowid
  25    IsNull        13  36   0                   0  if (r[13]==NULL) goto 36
  26    Null           0  14   0                   0  r[14]=NULL
  27    Column         1   1  15                   0  r[15]=products.name
  28    Column         1   2  16                   0  r[16]=products.category_id
  29    Column         1   3  17                   0  r[17]=products.price
  30    Column         1   4  19  0                0  r[19]=products.stock
  31    Add           19  20  18                   0  r[18]=r[19]+r[20]
  32    Affinity      14   5   0                   0  r[14..19] = D, B, D, E, D
  33    MakeRecord    14   5  21                   0  r[21]=mkrec(r[14..18])
  34    Insert         1  21  13  products         8  intkey=r[13] data=r[21]
  35  Next             1  24   0                   0
  36  Halt             0   0   0                   0
  37  Transaction      0   2  11                   0  iDb=0 tx_mode=Write
  38  Integer          1   8   0                   0  r[8]=1
  39  Integer        100  12   0                   0  r[12]=100
  40  Integer          1  20   0                   0  r[20]=1
  41  Goto             0   1   0                   0
