testing/sqltests/tests/snapshot_tests/subqueries/snapshots/subqueries__correlated-subquery-where.snap
---
source: subqueries.sqltest
expression: |-
  SELECT p.id, p.name, p.price
      FROM products p
      WHERE p.price > (
          SELECT avg(p2.price)
          FROM products p2
          WHERE p2.category_id = p.category_id
      );
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN products AS p
`--CORRELATED SCALAR SUBQUERY 1
   `--SEARCH p2 USING INDEX idx_products_category (category_id=?)

BYTECODE
addr  opcode              p1  p2  p3  p4              p5  comment
   0    Init               0  35   0                   0  Start at 35
   1    OpenRead           0   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2    Rewind             0  34   0                   0  Rewind table products
   3      BeginSubrtn      5   0   0                   0  r[5]=NULL
   4      Null             0   1   0                   0  r[1]=NULL
   5      Null             0   7   0                   0  r[7]=NULL
   6      Integer          1   8   0                   0  r[8]=1; LIMIT counter
   7      IfNot            8  20   0                   0  if !r[8] goto 20
   8      OpenRead         1   2   0  k(5,B,B,B,B,B)   0  table=products, root=2, iDb=0
   9      OpenRead         2   8   0  k(2,B)           0  index=idx_products_category, root=8, iDb=0
  10      Column           0   2   9                   0  r[9]=products.category_id
  11      IsNull           9  20   0                   0  if (r[9]==NULL) goto 20
  12      Affinity         9   1   0                   0  r[9..10] = D
  13      SeekGE           2  20   9                   0  key=[9..9]
  14        IdxGT          2  20   9                   0  key=[9..9]
  15        DeferredSeek   2   1   0                   0
  16        Column         1   3  10                   0  r[10]=products.price
  17        RealAffinity  10   0   0                   0
  18        AggStep        0  10   7  avg              0  accum=r[7] step(r[10])
  19      Next             2  14   0                   0
  20      AggFinal         0   7   0  avg              0  accum=r[7]
  21      Copy             7   6   0                   0  r[6]=r[7]
  22      Copy             6   1   0                   0  r[1]=r[6]
  23    Return             5   0   1                   0
  24    Column             0   3  12                   0  r[12]=products.price
  25    RealAffinity      12   0   0                   0
  26    Copy               1  13   0                   0  r[13]=r[1]
  27    Le                12  13  33  Binary           0  if r[12]<=r[13] goto 33
  28    RowId              0   2   0                   0  r[2]=products.rowid
  29    Column             0   1   3                   0  r[3]=products.name
  30    Column             0   3   4                   0  r[4]=products.price
  31    RealAffinity       4   0   0                   0
  32    ResultRow          2   3   0                   0  output=r[2..4]
  33  Next                 0   3   0                   0
  34  Halt                 0   0   0                   0
  35  Transaction          0   1  11                   0  iDb=0 tx_mode=Read
  36  Goto                 0   1   0                   0
